Hold microphone with r; module microphone

--- a/lib/boba_talkie_web/live/game_live.html.heex
+++ b/lib/boba_talkie_web/live/game_live.html.heex
@@ -161,7 +161,7 @@
                 <span>Recording... (Release to stop)</span>
               </div>
             <% else %>
-              Hold to Speak
+              Hold to Speak (or R)
             <% end %>
           </button>
         </div>
